Chiuso modulo 38 e 39 + fix richiesti:
-Scaricamento Vademecum in domanda standard (pag 35 delle specifiche)
-I tasti x valutazione devono essere attivi anche su campi di cui è
stata chiesta la modifica ma che non sono stati modificati (POTREBBE
ESSERE PROBLEMA): visualizzarli eventualmente con colore diverso in modo
tale da capire che era stata chiesta integrazione ma non è stata fatta
-Mettiamo in documenti una dicitura che è stata presa visione in quella
data (quando fai "presa visione" nel flusso). La dicitura esatta è: "Il
Provider non ha integrato i dati/documenti richiesti+ DATA". (T))
-Il sistema calcola in automatico le tempistiche relative alla
possibilità per il Provider di presentazione di una nuova istanza di
accreditamento provvisorio da parte del Provider, che potrà essere
presentata non prima di 6 mesi dalla data di conclusione del
procedimento, e che seguirà l’iter del procedimento di accreditamento
provvisorio. (pag 43 specifiche)
-Togliere obbligatorietà di tutti i file caricati nel verbale di
verifica
-Genera file metterlo in domanda staccandolo da conferma valutazione
-Rendere modificabili anche i dati del legale/delegato
-Sistemare etichetta verbale in documenti
-Vaschetta per domande in stato abilita campi
-Rendere modificabile per la Segreteria la riedizione in tutti i campi,
compresi quelli che devono rimanere esattamente uguali all'edizione
padre. Questa modifica è temporanea, fino a quando non sarà effettuato
il meccanismo di sincronizzazione padre-figlio nelle riedizioni.
-Paginazione pagina eventi per Segreteria. Li carica tutti e la pagina
sta diventando molto pesante. Facciamo che gli eventi siano suddivisi in
varie pagine.
-Modifica obiettivo 17. Spostare in:

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -797,7 +797,6 @@ h2 {
 .margin-valutabile {
 	height: 60px;
 	margin: 0;
-	overflow: hidden;
 	text-overflow: ellipsis;
 }
 
@@ -1458,3 +1457,6 @@ li.listStyle-elenco > label{
 	margin-left: 10px;
 }
 
+.big-icon {
+	font-size: 25px;
+}
