--- a/src/main/resources/templates/evento/eventoList.html
+++ b/src/main/resources/templates/evento/eventoList.html
@@ -327,7 +327,7 @@
 					$(".datatable-responsive-eventi-provider").DataTable({
 						"bFilter" : false,
 						"bInfo" : false,
-						"bPaginate" : false,
+						"bPaginate" : true,
 						 "columnDefs": [
 					                     {"targets": colonne, "width": "1px"},
 					                     {"targets": confermati, "sClass": "center"},
